cmake_minimum_required(VERSION 3.26)
project(hospital_project)

set(CMAKE_CXX_STANDARD 17)

add_executable(hospital_project main.cpp
        saram.cpp
        saram.h
        tehreem.cpp
        tehreem.h
        daniyal.cpp
        daniyal.h
        Umer_Ahmed.cpp
        Umer_Ahmed.h
        fatima.cpp
        fatima.h
        abdullah.cpp
        abdullah.h
        tayyab.cpp
        tayyab.h
        hamza.cpp
        hamza.h)
